typescript/checker/tests/errors/copied/var-assignment/index.ts
var as1 = (as1 = 2);
var as1: number;